--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
   <color name="material_blue_500">#2196F3</color>
   <color name="material_red_700">#D50000</color>
   <color name="material_green_700">#00C853</color>
+  <color name="colorAccent">#B3E5FC</color>
+  <color name="red_color">#de2c1f</color>
+  <color name="green_color">#77f277</color>
+  <color name="black_color">#000000</color>
+  <color name="white_color">#FFFFFF</color>
+  <color name="light_blue">#065b9e</color>
+
 </resources>
