--- a/app/src/main/res/layout/activity_my_stocks.xml
+++ b/app/src/main/res/layout/activity_my_stocks.xml
@@ -1,23 +1,39 @@
-
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/light_blue"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
   <android.support.v7.widget.RecyclerView
       android:id="@+id/recycler_view"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+      android:layout_height="match_parent">
+
+  </android.support.v7.widget.RecyclerView>
+
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/empty_no_connection"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:fontFamily="sans-serif-condensed"
+        android:contentDescription="@string/empty_stock_list"
+        android:textAppearance="?android:textAppearanceLarge"/>
+
+  </LinearLayout>
 
   <com.melnykov.fab.FloatingActionButton
       android:id="@+id/fab"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_gravity="bottom|right"
+      android:layout_gravity="bottom|end"
       android:layout_margin="16dp"
+      android:contentDescription="@string/add_stock"
       android:src="@drawable/ic_add_white_24dp"
       fab:fab_colorNormal="@color/material_blue_500"
       fab:fab_colorPressed="@color/material_blue_600"
@@ -25,6 +41,7 @@
       fab:fab_shadow="true"
       fab:fab_type="normal"
       fab:layout_anchor="recycler_view"
-      fab:layout_anchorGravity="bottom | end"
-      />
+      fab:layout_anchorGravity="bottom | end" />
+
+
 </FrameLayout>
